# LVBI

./: .cproject  .gitignore  .project  CMakeLists.txt  Doxyfile  LICENSE  README.md  sdkconfig  sdkconfig.old
components/battery_reader/: CMakeLists.txt
components/battery_reader/include/: battery_reader.h
components/battery_reader/src/: battery_reader.c
components/compact_config_db/: CMakeLists.txt
components/compact_config_db/include/: compact_config_db.h
components/data_handler/: CMakeLists.txt
components/data_handler/include/: data_handler.h
components/data_handler/src/: data_handler.c
components/display_handler/: CMakeLists.txt
components/display_handler/include/: display_handler.h
components/display_handler/src/: display_handler.c
components/error_defs/: CMakeLists.txt
components/error_defs/include/: error_defs.h
components/hwa_i2c/: CMakeLists.txt
components/hwa_i2c/include/: hwa_i2c.h
components/hwa_i2c/src/: hwa_i2c.c
components/ina219/: CMakeLists.txt
components/ina219/include/: ina219.h
components/ina219/src/: ina219.c
components/lvbi_kv/: CMakeLists.txt
components/lvbi_kv/include/: lvbi_kv.h
components/lvbi_kv/src/: lvbi_kv.c
components/oled_ssd1306/: CMakeLists.txt
components/oled_ssd1306/include/: oled_ssd1306.h
components/oled_ssd1306/src/: oled_ssd1306.c
components/setup_portal/: CMakeLists.txt
components/setup_portal/include/: setup_portal.h
components/telemetry_handler/: CMakeLists.txt
main/: CMakeLists.txt  main.c
partition_table/: partitions_esp32c6.csv
(+3 files in other folders)
